--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ body {font-family: "Lato", sans-serif}
 
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
         <div class="w3-third w3-margin-bottom">
-            <a href="meme.html"><iframe src="meme.html" width=100% height=500px></iframe>
+            <a href="meme.html"><iframe src="meme.html" width=700px height=500px></iframe>
         </div>
 
       </div>
