--- a/meme.html
+++ b/meme.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MemoGraphy - Memes!</title>
+  <title>HoneyPieAI - ANIME FEEDS</title>
   <meta name="description" content="Enjoy fresh and funny memes with MemoGraphy – powered by Meme API">
   <meta property="og:title" content="MemoGraphy – Memes Galore">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -195,7 +195,7 @@
 </style>
   <!-- 2️⃣ Your title -->
   <h1 class="flex-grow-1 text-center mb-0" style="color: #ff9800; padding: 10px 0;">
-    🔥 MemoGraphy - OTAKU HAVEN
+    🔥 FEEDS - OTAKU HAVEN
   </h1>
 </div>
     <br>
