--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ body {font-family: "Lato", sans-serif}
               <div class="w3-third">
         <p>Moira</p>
         <img src="https://cdn.pixabay.com/photo/2023/01/13/16/29/girl-7716485_1280.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:90%; height: 400px;" >
-        <br><a href="chatbots/moira.html"><button class="msgbtn">MESSAGE (FREE)</button></a> <br><br>
+        <br><a href="chatbots/moira1.html"><button class="msgbtn">MESSAGE (FREE)</button></a> <br><br>
       </div>
       </a>
       
