--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ body {font-family: "Lato", sans-serif}
       <div class="w3-third">
         <p>Yuki</p>
         <img src="https://cdn.pixabay.com/photo/2023/01/27/16/25/anime-7749031_1280.jpg" class="w3-round" alt="Random Name" style="width: 90%; height: 400px;">
-        <br><br><a href="#"><button class="msgbtn">MESSAGE (FREE)</button></a> <br><br>
+        <br><br><a href="chatbots/yuki.html"><button class="msgbtn">MESSAGE (FREE)</button></a> <br><br>
       </div>
     </div>
   </div>
