--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ body {font-family: "Lato", sans-serif}
             <p><b>Anime Quiz Game</b></p>
             <p class="w3-opacity">Fri 27 Nov 2024</p>
             <p>Win the quiz and get your free prize.</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Play Game</button>
+            <a href="fun_game.html"><button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Play Game</button></a>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
@@ -158,7 +158,7 @@ body {font-family: "Lato", sans-serif}
             <p><b>Catch your Senpai</b></p>
             <p class="w3-opacity">Sat 28 Nov 2024</p>
             <p>A fun game to play. Can you beat the score 30?</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Play Game</button>
+            <a href="catch_senpai.html"><button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Play Game</button></a>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
@@ -183,11 +183,8 @@ body {font-family: "Lato", sans-serif}
         <h2 class="w3-wide"><i class="fa fa-suitcase w3-margin-right"></i>Tickets</h2>
       </header>
       <div class="w3-container">
-        <p><label><i class="fa fa-shopping-cart"></i> Tickets, $15 per person</label></p>
-        <input class="w3-input w3-border" type="text" placeholder="How many?">
-        <p><label><i class="fa fa-user"></i> Send To</label></p>
-        <input class="w3-input w3-border" type="text" placeholder="Enter email">
-        <button class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right">PAY <i class="fa fa-check"></i></button>
+    <h2>GAME COMING SOON!</h2>
+        <button class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right">OK <i class="fa fa-check"></i></button>
         <button class="w3-button w3-red w3-section" onclick="document.getElementById('ticketModal').style.display='none'">Close <i class="fa fa-remove"></i></button>
         <p class="w3-right">Need <a href="#" class="w3-text-blue">help?</a></p>
       </div>
